@@ -1,3 +1,7 @@
+2023-07-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-get-buffer-string): Stabilize.
+
 2023-07-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (with-tramp-timeout): Ensure, that the timeout is a
